cicd-example/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: cicd-example
    env: production
    type: app
  name: cicd-example
spec:
  replicas: 2
  selector:
    matchLabels:
      app: cicd-example
      env: production
      type: app
  strategy:
    rollingUpdate:
      maxSurge: 2
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: cicd-example
        env: production
        type: app
    spec:
      containers:
        - name: cicd-example
          image: rafarlopes/cicd-example:363b2b9
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
