cicd-example/service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: cicd-example
    env: production
    type: app
  name: cicd-example
spec:
  ports:
  - name: http
    port: 8080
    targetPort: 8080
  selector:
    app: cicd-example
    env: production
    type: app
