cicd-example/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"
  name: cicd-example-ingress
spec:
  rules:
  - host: cicd-example-dev.rrlopes.com
    http:
      paths:
      - backend:
          service:
            name: cicd-example
            port:
              number: 8080
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - cicd-example-dev.rrlopes.com
    secretName: cicd-example-dev-tls-certificate
